feat!: change URI pathes
